Improve tests for pinning